# ZERO-WASTE-MANAGEMENT

./: .firebaserc  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.firebase/: hosting.ZGlzdA.cache
Backend/: pyproject.toml
src/: App.css  App.jsx  AppRouter.jsx  index.css  utils.js
src/BACKEND/: Backend.js
src/Firebase/: Firebase.jsx
src/Protected/: protected.jsx
src/Providers/: index.jsx
src/components/: NewPassword.jsx
src/components/Buttons/: button.module.css  index.jsx
src/components/Forgotpassword/: Forgotpassword.jsx  VerifyEmail.jsx
src/components/Input/: index.jsx  input.module.css
src/components/Nav1/: index.jsx  nav.module.css
src/components/dashboard/: nav-link.jsx  nav-link.module.css
src/components/footer/: footer.module.css  index.jsx
src/components/inc/: header.jsx  sidebar.jsx
src/pages/Auth/Login/: login.jsx
src/pages/Auth/Register/: Register.jsx
src/pages/ClientBookingpage/: BookingPage.jsx
src/pages/EmailVerification/: verificationPage.jsx  verifyUser.jsx
src/pages/Home-page/: homepage.module.css  index.jsx
src/pages/Payment/: PaystackIntegration.jsx
src/pages/Register/: index.jsx
src/pages/dashboard/: index.jsx
src/pages/dashboard/Admin/: AdminHeader.jsx  Admindashboard.jsx  Adminsidebar.jsx  Ordersinprogress.jsx  Pendingorders.jsx  admin.module.css
src/pages/dashboard/Logout/: LogOut.jsx
src/pages/dashboard/Offers/: Offers.jsx
src/pages/dashboard/Orders/: Orders.jsx
src/pages/dashboard/Profile/: Profile.jsx
src/pages/dashboard/RequestPickup/: RequestPickup.jsx
(+2 files in other folders)
