[tool.poetry]
name = "zero waste management"
version = "0.1.0"
description = "ZERO WASTE MANAGEMENT"
authors = ["NwoluDavid & Ikechukwu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
passlib = "^1.7.4"
tenacity = "^8.2.3"
pydantic = "^2.6.4"
alembic = "^1.13.1"
python-jose = "^3.3.0"
httpx = "^0.27.0"
psycopg = "^3.1.18"
sqlmodel = "^0.0.16"
bcrypt = "^4.1.2"
pydantic-settings = "^2.2.1"
sentry-sdk = "^1.45.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
